package com.xixi.lab.dp.ox1_creational.ox1_03_abstract_factory.product;

/**
 * 耳机抽象类
 */
public abstract class AbstractEarphone implements IProduct {
    /**
     * 耳机类产品描述
     */
    @Override
    public abstract void desc();
}
