package com.xixi.lab.dp.ox1_creational.ox1_03_abstract_factory.product;

/**
 * 笔记本抽象类
 */
public abstract class AbstractLaptop implements IProduct {
    /**
     * 笔记本类产品描述
     */
    @Override
    public abstract void desc();
}
