package com.xixi.lab.dp.ox1_creational.ox1_03_abstract_factory.product;

/**
 * 手机抽象类
 */
public abstract class AbstractPhone implements IProduct {
    /**
     * 手机类产品描述
     */
    @Override
    public abstract void desc();
}
