package com.xixi.lab.dp.ox1_creational.ox1_03_abstract_factory.product;

public class AppleLaptop extends AbstractLaptop {
    /**
     * 苹果笔记本描述
     */
    @Override
    public void desc() {
        System.out.println("I am Apple laptop.");
    }
}
