package com.xixi.lab.dp.ox1_creational.ox1_03_abstract_factory.product;

public class ApplePhone extends AbstractPhone {
    /**
     * 苹果手机描述
     */
    @Override
    public void desc() {
        System.out.println("I am Apple phone.");
    }
}
