package com.xixi.lab.dp.ox1_creational.ox1_03_abstract_factory.product;

public class HuaweiEarphone extends AbstractEarphone {
    /**
     * 华为耳机描述
     */
    @Override
    public void desc() {
        System.out.println("I am Huawei earphone.");
    }
}
