package com.xixi.lab.dp.ox1_creational.ox1_03_abstract_factory.product;

public class HuaweiLaptop extends AbstractLaptop {
    /**
     * 华为笔记本描述
     */
    @Override
    public void desc() {
        System.out.println("I am Huawei laptop.");
    }
}
