package com.xixi.lab.dp.ox1_creational.ox1_03_abstract_factory.product;

// 抽象产品
public interface IProduct {
    /**
     * 产品描述
     */
    void desc();
}
